# projeto_estagio_2026_1

./: .gitignore  README.md  pyproject.toml  requirements.txt
contabilidade/: apps.py  content.py  forms.py  models.py  urls.py  views.py
contabilidade/migrations/: 0001_initial.py  0002_message_phone.py  0003_message_is_read.py
contabilidade/templates/: base.html  landpage.html  login.html  panel.html
contabilidade/templates/contabilidade/: landpage.html
contabilidade/templates/partials/: footer.html  header.html  section_services.html  service_card.html
contabilidade/templates/partials/landing_page/: section_contact.html  section_partiners.html  section_pricing.html  section_services.html  section_testimonials.html
contabilidade/templates/partials/panel/: message_card.html
contabilidade/templates/partials/shared/: header.html
core/: settings.py  urls.py
