[project]
name = "projeto-estagio-2026-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
]

[tool.ruff]
line-length = 85
exclude = [
    "migrations",
    "alembic",
    ".venv",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "D",
]

ignore = [
    "E501",
    "W191",
    "E111",
    "E114",
    "E116",
    "E117",
    "D206",
    "D100",
    "D212",
    "D104",
    "D101",
    "D200",
    "D105",
    "D106",
    "D107",
    "B904",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
    "D",
    ]
